<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_label"
        android:summary="@string/pref_temperature_summary"
        android:entries="@array/metrics"
        android:entryValues="@array/metricsValues"
        android:defaultValue="@string/pref_temperature_default"/>

</PreferenceScreen>